[gd_scene load_steps=4 format=2]

[ext_resource path="res://LinkText.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/Credits.gd" type="Script" id=2]
[ext_resource path="res://scenes/UIs/Exit.tscn" type="PackedScene" id=3]

[node name="Credits" type="Node2D"]
position = Vector2( 39, 18 )
script = ExtResource( 2 )

[node name="Selar" type="LinkButton" parent="."]
margin_left = -25.0
margin_top = 43.0
margin_right = 511.0
margin_bottom = 73.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 1
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "selar - coder, spriter"

[node name="Socials" type="Control" parent="Selar"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Twitter" type="LinkButton" parent="Selar/Socials"]
margin_left = 301.333
margin_top = -0.666668
margin_right = 407.333
margin_bottom = 29.3333
custom_colors/font_color = Color( 0.505882, 0.792157, 1, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "twitter"

[node name="Youtube" type="LinkButton" parent="Selar/Socials"]
margin_left = 412.0
margin_top = -1.33333
margin_right = 524.0
margin_bottom = 28.6667
custom_colors/font_color = Color( 1, 0.352941, 0.352941, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "youtube"

[node name="Kriz" type="LinkButton" parent="."]
margin_left = -24.0
margin_top = 80.0
margin_right = 499.0
margin_bottom = 110.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 1
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "kriz - musician, spriter"

[node name="Socials" type="Control" parent="Kriz"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Youtube" type="LinkButton" parent="Kriz/Socials"]
margin_left = 315.333
margin_right = 427.333
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 0.352941, 0.352941, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "youtube"

[node name="Main" type="Label" parent="."]
self_modulate = Color( 0.811765, 0.811765, 0.811765, 1 )
margin_left = -25.0
margin_top = 4.0
margin_right = 266.0
margin_bottom = 34.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = ExtResource( 1 )
text = "-the like main people-"
align = 1
valign = 1

[node name="yea" type="Label" parent="."]
self_modulate = Color( 0.811765, 0.811765, 0.811765, 1 )
margin_left = -24.0
margin_top = 129.0
margin_right = 267.0
margin_bottom = 159.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = ExtResource( 1 )
text = "-yeah thats about it-"
valign = 1

[node name="hover" type="Label" parent="."]
self_modulate = Color( 0.811765, 0.811765, 0.811765, 1 )
margin_left = -26.0
margin_top = 540.0
margin_right = 265.0
margin_bottom = 570.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = ExtResource( 1 )
text = "(click to see socials)"
valign = 1

[node name="Exit" parent="." instance=ExtResource( 3 )]
margin_left = 892.0
margin_top = 536.0
margin_right = 977.0
margin_bottom = 581.0

[connection signal="button_up" from="Selar" to="." method="_on_Selar_button_up"]
[connection signal="button_up" from="Selar/Socials/Twitter" to="." method="_on_Twitter_button_up"]
[connection signal="button_up" from="Selar/Socials/Youtube" to="." method="_on_Youtube_button_up"]
[connection signal="button_up" from="Kriz" to="." method="_on_Kriz_button_up"]
[connection signal="button_up" from="Kriz/Socials/Youtube" to="." method="_on_Kriz_Youtube_button_up"]
[connection signal="button_up" from="Exit" to="." method="_on_Exit_button_up"]
